--- a/trunk/XennetClient/XennetClient.cbp
+++ b/trunk/XennetClient/XennetClient.cbp
@@ -3,6 +3,7 @@
 	<FileVersion major="1" minor="6" />
 	<Project>
 		<Option title="XennetClient" />
+		<Option platforms="Windows;Unix;" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
@@ -31,7 +32,12 @@
 		<Compiler>
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
+			<Add directory="/home/kurtis/Programming/Projects/Xennet/libXennet/src" />
 		</Compiler>
+		<Linker>
+			<Add library="Xennet" />
+			<Add directory="/home/kurtis/Programming/Projects/Xennet/libXennet" />
+		</Linker>
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
