--- a/libXennet/libXennet.cbp
+++ b/libXennet/libXennet.cbp
@@ -34,6 +34,7 @@
 				</Linker>
 			</Target>
 		</Build>
+		<Unit filename="src/Xennet.hpp" />
 		<Unit filename="src/linux/xenPacket.cpp" />
 		<Unit filename="src/linux/xenPacket.h" />
 		<Unit filename="src/linux/xenSocket.cpp" />
