--- a/libXennet/libXennet.cbp
+++ b/libXennet/libXennet.cbp
@@ -37,6 +37,8 @@
 		<Unit filename="src/Xennet.hpp" />
 		<Unit filename="src/linux/xenPacket.cpp" />
 		<Unit filename="src/linux/xenPacket.h" />
+		<Unit filename="src/linux/xenServerSocket.cpp" />
+		<Unit filename="src/linux/xenServerSocket.hpp" />
 		<Unit filename="src/linux/xenSocket.cpp" />
 		<Unit filename="src/linux/xenSocket.hpp" />
 		<Unit filename="src/linux/xenSocketAddress.cpp" />
@@ -45,6 +47,8 @@
 		<Unit filename="src/xenInfo.hpp" />
 		<Unit filename="src/xenMain.hpp" />
 		<Unit filename="src/xenPacketBase.hpp" />
+		<Unit filename="src/xenServerSocketBase.cpp" />
+		<Unit filename="src/xenServerSocketBase.hpp" />
 		<Unit filename="src/xenSocketAddressBase.hpp" />
 		<Unit filename="src/xenSocketBase.cpp" />
 		<Unit filename="src/xenSocketBase.hpp" />
